--- a/index.html
+++ b/index.html
@@ -11,32 +11,37 @@
 	<title>JY</title>
 </head>
 <body>
-
-	<!--<img src="assets/pic1.jpg" alt="">-->
-
 	<header>
 		<nav class="nav">
-			<a href="index.html" class="nav-ele">Jiayao</a>
-			<a href="index.html" class="nav-ele">Home</a>
-			<a href="" class="nav-ele">Education</a>
-			<a href="" class="nav-ele">Hobbies</a>
-			<a href="" class="nav-ele">Interests</a>
-			<a href="" class="nav-ele">Contact</a>
+			<!--<a href="index.html" class="nav-logo">Jiayao</a>-->
+			<div class="nav-logo"><a href="index.html" id="nav-logo-id">JY</a></div>
+			<div class="nav-right">
+				<a href="index.html" class="nav-ele">Home</a>
+				<a href="education.html" class="nav-ele">Education</a>
+				<a href="" class="nav-ele">Hobbies</a>
+				<a href="" class="nav-ele">Interests</a>
+				<a href="contact.html" class="nav-ele">Contact</a>
+			</div>
 		</nav>
 	</header>
+	<!-- main page -->
 	<main>
-		<section>
-			"Without music, life would be a mistake."
-			<h1>Hi !<br/>Here's Jiayao</h1>
-			<p>I'm Jiayao Yang. <br>I just got my Bachelar's Degree and graduated from Xi'an Jiaotong University. <br>And I'll study at University of Michigan from Fall 2021. </p>
-		</section>
-		<section>
-			More information is updating soon!
-		</section>
-		<section>
-			<p>Contact me at jiayao@umich.edu</p>
-		</section>
-
+		<div class='welcome'>
+			<section>
+				<p id="welcome-quate">"Without music, life would be a mistake."</p>
+				<h1 class="welcome-title">Hi !<br/>Here's Jiayao</h1>
+				<p>I'm Jiayao Yang. <br>I just got my Bachelar's Degree and graduated from Xi'an Jiaotong University. <br>And I'll study at University of Michigan from Fall 2021. </p>
+			</section>
+		</div>
+		<div class="col">
+			<section class="col-1-2">
+				<p class="p-para">More information is updating soon!</p>
+			</section>
+			<section class="col-1-2">
+				<p class="p-para">Contact me at jiayao@umich.edu</p>
+			</section>
+		</div>
+		
 	</main>
 	<hr>
 	<footer >
