--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="jiayao">
 	<!-- CSS here -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 	<title>JY-contact</title>
 </head>
 <body>
