--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<div class="nav-logo"><a href="index.html" id="nav-logo-id">JY</a></div>
 			<div class="nav-right">
 				<a href="index.html" class="nav-ele">Home</a>
-				<a href="education.html" class="nav-ele">Education</a>
+				<a href="" class="nav-ele">Education</a>
 				<a href="" class="nav-ele">Hobbies</a>
 				<a href="" class="nav-ele">Interests</a>
-				<a href="contact.html" class="nav-ele">Contact</a>
+				<a href="pages/contact.html" class="nav-ele">Contact</a>
 			</div>
 		</nav>
 	</header>
