--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 	<header>
 		<nav class="nav">
 			<!--<a href="index.html" class="nav-logo">Jiayao</a>-->
-			<div class="nav-logo"><a href="index.html" id="nav-logo-id">JY</a></div>
+			<div class="nav-logo"><a href="index.html" id="nav-logo-id">Jiayao</a></div>
 			<div class="nav-right">
 				<a href="index.html" class="nav-ele">Home</a>
-				<a href="" class="nav-ele">Education</a>
+				<a href="pages/cv.html" class="nav-ele">CV</a>
+				<!--<a href="pages/education.html" class="nav-ele">Education</a>-->
+				<!--
 				<a href="" class="nav-ele">Hobbies</a>
-				<a href="" class="nav-ele">Interests</a>
+				<a href="" class="nav-ele">Interests</a>-->
+				<a href="pages/about.html" class="nav-ele">About</a>
 				<a href="pages/contact.html" class="nav-ele">Contact</a>
 			</div>
 		</nav>
@@ -27,25 +30,37 @@
 	<!-- main page -->
 	<main>
 		<div class='welcome'>
-			<section>
-				<p id="welcome-quate">"Without music, life would be a mistake."</p>
-				<h1 class="welcome-title">Hi !<br/>Here's Jiayao</h1>
-				<p>I'm Jiayao Yang. <br>I just got my Bachelar's Degree and graduated from Xi'an Jiaotong University. <br>And I'll study at University of Michigan from Fall 2021. </p>
-			</section>
+			<div style="max-width: 1000px;margin: 0 auto;">
+				<section style="display: inline-block;max-width: 700px;">
+					<p id="welcome-quate">"Without music, life would be a mistake."</p>
+					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
+					<p>
+						I'm Jiayao Yang. <br>I just got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. <br>Starting Fall 2021, I'm going to study at <strong><a href="https://umich.edu/" target="_blink">University of Michigan</a></strong> ECE Department.   
+					</p>
+					<p>
+						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.
+					</p>
+				</section>
+			</div>
 		</div>
-		<div class="col">
-			<section class="col-1-2">
-				<p class="p-para">More information is updating soon!</p>
-			</section>
-			<section class="col-1-2">
-				<p class="p-para">Contact me at jiayao@umich.edu</p>
-			</section>
+		<div style="max-width: 900px;margin: 0 auto;">
+		<!-- to make the box at center with max width! -->
+			<div class="col">
+				<section class="intro-box">
+					<p class="p-para">More information is updating soon!
+					</p>
+				</section>
+				<section class="intro-box">
+					<p class="p-para">You could contact me at <a href="mailto:jiayao@umich.edu" class="hovernone">jiayao@umich.edu</a></p>
+				</section>
+			</div>
 		</div>
 		
 	</main>
+	<!-- footer -->
 	<hr>
-	<footer >
-		<small>&copy;2021 Jiayao Yang, Last update: 2021/7/21</small>
+	<footer style="text-align: center;">
+		<small>&copy;2021 Jiayao Yang, Last update: 2021/7/24</small>
 	</footer>
 
 	<!-- others -->
