--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,34 +8,37 @@
 	<meta name="author" content="jiayao">
 	<!-- CSS here -->
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>JY-contact</title>
+	<title>JY</title>
 </head>
 <body>
 	<header>
 		<nav class="nav">
 			<!--<a href="index.html" class="nav-logo">Jiayao</a>-->
-			<div class="nav-logo"><a href="../index.html" id="nav-logo-id">JY</a></div>
+			<div class="nav-logo"><a href="../index.html" id="nav-logo-id">Jiayao</a></div>
 			<div class="nav-right">
 				<a href="../index.html" class="nav-ele">Home</a>
-				<a href="education.html" class="nav-ele">Education</a>
-				<a href="" class="nav-ele">Hobbies</a>
-				<a href="" class="nav-ele">Interests</a>
+				<a href="cv.html" class="nav-ele">CV</a>
+				<!--<a href="" class="nav-ele">Hobbies</a>
+				<a href="" class="nav-ele">Interests</a>-->
+				<a href="about.html" class="nav-ele">About</a>
 				<a href="contact.html" class="nav-ele">Contact</a>
 			</div>
 		</nav>
 	</header>
 	<!-- main page -->
 	<main>
-		<section class="paragraph">
-			<h1>Contact</h1>
-			<section class="para-content">
-				<dl>
-				<dt>E-mail</dt>
-				<dd><a href="mailto:jiayao@umich.edu">jiayao@umich.edu</dd>
-				<dd><a href="mailto:yjyjxrw@163.com">yjyjxrw@163.com</dd>
-			</dl>
+		<div style="max-width: 800px;margin: 0 auto;">
+			<section class="paragraph">
+				<h1>Contact</h1>
+				<section class="para-content">
+					<dl>
+					<dt>E-mail</dt>
+					<dd><a href="mailto:jiayao@umich.edu">jiayao@umich.edu</a></dd>
+					<!--<dd><a href="mailto:yjyjxrw@163.com">yjyjxrw@163.com</a></dd>-->
+				</dl>
+				</section>
 			</section>
-		</section>
+		</div>
 	</main>
 </body>
 </html>
