--- a/index.html
+++ b/index.html
@@ -14,36 +14,42 @@
 	<header>
 		<nav class="nav">
 			<!--<a href="index.html" class="nav-logo">Jiayao</a>-->
-			<div class="nav-logo"><a href="index.html" id="nav-logo-id">Jiayao</a></div>
-			<div class="nav-right">
+			<!--<section class="nav-logo"><a href="index.html" id="nav-logo-id">Jiayao</a></section> &emsp;&emsp;-->
+			<section class="nav-right">
 				<a href="index.html" class="nav-ele">Home</a>
-				<a href="pages/cv.html" class="nav-ele">CV</a>
+				<a href="pages/cv.html" class="nav-ele">About Me</a>
 				<!--<a href="pages/education.html" class="nav-ele">Education</a>-->
 				<!--
 				<a href="" class="nav-ele">Hobbies</a>
-				<a href="" class="nav-ele">Interests</a>-->
-				<a href="pages/about.html" class="nav-ele">About</a>
+				<a href="" class="nav-ele">Interests</a>
+				<a href="pages/about.html" class="nav-ele">About</a>-->
 				<a href="pages/contact.html" class="nav-ele">Contact</a>
-			</div>
+			</section>
 		</nav>
 	</header>
 	<!-- main page -->
 	<main>
 		<div class='welcome'>
-			<div style="max-width: 1000px;margin: 0 auto;">
+			<div style="max-width: 800px;margin: 0 auto;">
 				<section style="display: inline-block;max-width: 700px;">
 					<p id="welcome-quate">"Without music, life would be a mistake."</p>
 					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
 					<p>
-						I'm Jiayao Yang. <br>I just got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. <br>Starting Fall 2021, I'm going to study at <strong><a href="https://umich.edu/" target="_blink">University of Michigan</a></strong> ECE Department.   
+						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. <br>Currently, I'm studying at <strong><a href="https://umich.edu/" target="_blink">University of Michigan</a></strong>'s ECE Department. 
 					</p>
 					<p>
-						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.
+						As a learner in <em>signals and images processing and machine learning</em>, I'm so excited to be on my way to approaching more cutting-edge theories and applications!
 					</p>
-				</section>
+					<!--<p>
+						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.<br><strong><span style="color: red;">And I'm looking for xx position.</span></strong>
+					</p>-->
+				</section><!--
+				<section style="display: inline-block;">
+					picture
+				</section>-->
 			</div>
 		</div>
-		<div style="max-width: 900px;margin: 0 auto;">
+		<div style="max-width: 850px;margin: 0 auto;">
 		<!-- to make the box at center with max width! -->
 			<div class="col">
 				<section class="intro-box">
@@ -60,7 +66,7 @@
 	<!-- footer -->
 	<hr>
 	<footer style="text-align: center;">
-		<small>&copy;2021 Jiayao Yang, Last update: 2021/7/24</small>
+		<small>&copy;2021 Jiayao Yang, Last update: 2021/9/12</small>
 	</footer>
 
 	<!-- others -->
