--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,10 +17,10 @@
 			<div class="nav-logo"><a href="../index.html" id="nav-logo-id">Jiayao</a></div>
 			<div class="nav-right">
 				<a href="../index.html" class="nav-ele">Home</a>
-				<a href="cv.html" class="nav-ele">CV</a>
+				<a href="cv.html" class="nav-ele">About Me</a>
 				<!--<a href="" class="nav-ele">Hobbies</a>
-				<a href="" class="nav-ele">Interests</a>-->
-				<a href="about.html" class="nav-ele">About</a>
+				<a href="" class="nav-ele">Interests</a>
+				<a href="about.html" class="nav-ele">About</a>-->
 				<a href="contact.html" class="nav-ele">Contact</a>
 			</div>
 		</nav>
