--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,13 +8,13 @@
 	<meta name="author" content="jiayao">
 	<!-- CSS here -->
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<title>JY</title>
+	<title>JY-Contact</title>
 </head>
 <body>
 	<header>
 		<nav class="nav">
 			<!--<a href="index.html" class="nav-logo">Jiayao</a>-->
-			<div class="nav-logo"><a href="../index.html" id="nav-logo-id">Jiayao</a></div>
+			<!--<div class="nav-logo"><a href="../index.html" id="nav-logo-id">Jiayao</a></div>  &emsp;&emsp;-->
 			<div class="nav-right">
 				<a href="../index.html" class="nav-ele">Home</a>
 				<a href="cv.html" class="nav-ele">About Me</a>
