--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="jiayao">
 	<!-- CSS here -->
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>JY</title>
+	<title>Jiayao</title>
 </head>
 <body>
 	<header>
@@ -17,13 +17,14 @@
 			<!--<section class="nav-logo"><a href="index.html" id="nav-logo-id">Jiayao</a></section> &emsp;&emsp;-->
 			<section class="nav-right">
 				<a href="index.html" class="nav-ele">Home</a>
-				<a href="pages/cv.html" class="nav-ele">About Me</a>
+				<!--<a href="pages/cv.html" class="nav-ele">About Me</a>-->
+				<a href="#aboutme" class="nav-ele">About Me</a>
 				<!--<a href="pages/education.html" class="nav-ele">Education</a>-->
 				<!--
 				<a href="" class="nav-ele">Hobbies</a>
 				<a href="" class="nav-ele">Interests</a>
-				<a href="pages/about.html" class="nav-ele">About</a>-->
-				<a href="pages/contact.html" class="nav-ele">Contact</a>
+				<a href="pages/about.html" class="nav-ele">About</a>
+				<a href="pages/contact.html" class="nav-ele">Contact</a>-->
 			</section>
 		</nav>
 	</header>
@@ -32,41 +33,197 @@
 		<div class='welcome'>
 			<div style="max-width: 800px;margin: 0 auto;">
 				<section style="display: inline-block;max-width: 700px;">
-					<p id="welcome-quate">"Without music, life would be a mistake."</p>
+					<p id="welcome-quate"><!--"Without music, life would be a mistake."-->We should consider every day lost on which we have not danced at least once. And we should call every truth false which was not accompanied by at least one laugh. 🌠🌠</p>
 					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
+					<section><!--newly added to make a box-->
 					<p>
-						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. <br>Currently, I'm studying at <strong><a href="https://umich.edu/" target="_blink">University of Michigan</a></strong>'s ECE Department. 
+						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. Currently, I'm studying at <strong><a href="https://umich.edu/" target="_blink">University of Michigan-Ann Arbor</a></strong>'s ECE Department. 
 					</p>
 					<p>
-						As a learner in <em>signals and images processing and machine learning</em>, I'm so excited to be on my way to approaching more cutting-edge theories and applications!
+						As a learner in <font color="purple">signal and image processing and machine learning</font>, I'm excited to learn and expecting creating!
 					</p>
+					</section>
 					<!--<p>
-						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.<br><strong><span style="color: red;">And I'm looking for xx position.</span></strong>
+						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.<br><strong><span style="color: red;">And I'm looking for Lab RA position.</span></strong>
 					</p>-->
 				</section><!--
 				<section style="display: inline-block;">
-					picture
+					<img src="assets/picture1.png" alt="&#11029;" width=180px>
 				</section>-->
+				<p></p>
+				<section class="button">
+					<a href="mailto:jiayao@umich.edu" class="hovernone"><b>Contact Me &#9993; </b></a> &nbsp; jiayao@umich.edu
+				</section>
 			</div>
 		</div>
+		<!-- ----------------------- -->
+		<!-- contents on home page! -->
+
+
+		<!------------------------------>
+		<!--- information boxes ------>
+		<!------------------------------>
 		<div style="max-width: 850px;margin: 0 auto;">
 		<!-- to make the box at center with max width! -->
+			<!-- start with boxes. -->
 			<div class="col">
-				<section class="intro-box">
-					<p class="p-para">More information is updating soon!
+				<!--<section class="intro-box">
+					<p class="p-para">More information is updating soon! I started this website from scratch. 
 					</p>
-				</section>
-				<section class="intro-box">
+				</section>-->
+				<!--<section class="intro-box">
+					<p class="p-para">Ability for sensing emotion, ability for sensing the life, ability for sensing the world. With both strength and emotions!
+					</p>
+				</section>-->
+				<!--<section class="intro-box">
 					<p class="p-para">You could contact me at <a href="mailto:jiayao@umich.edu" class="hovernone">jiayao@umich.edu</a></p>
-				</section>
+				</section>-->
+				<!------- adding a break in case no info ------->
+				<p style="text-align: center;">&#10024;&emsp;&#10024;&emsp;&#10024;&emsp;&#10024;</p>
+			</div>
+			<!--------- some writings here --------->
+		</div>
+
+		<!------------------------------->
+		<!-- A brif statement -->
+		<!------------------------------->
+		<div style="background: aliceblue;background: lavender;background: floralwhite;padding-bottom: 30px;" id="aboutme"><!--choices for background: floralwhite, -->
+			<div style="max-width: 800px;margin: 0 auto;">
+			<section class="paragraph">
+				<h2 style="color: tomato;">About Me</h2>
+				<p class="p-compact">
+					&emsp;&emsp;Currently, I'm a graduate student at University of Michigan at Ann Arbor, focusing on <b>Signal & Image Processing and Machine Learning</b>. Before coming to Michigan, I was an engineering student mainly focusing on signals and communications at XI'an Jiaotong University. I have also taken courses at UC, Irvine for a quarter. 
+				</p>
+				<p class="p-compact">
+					&emsp;&emsp;Starting my undergraduate, I've learned lots of courses from different areas up to now. Courses relevant to such as <font color="purple"><em>signals, communications, circuits, and electromagnetism</em></font>. 
+
+					During last semester in my undergraduate I worked on a project using machine learning to analyze financial data and stock prices.
+
+					In my spare time, I enjoy music and painting.
+				</p>
+				<p class="p-compact">
+					&emsp;&emsp;I really appreciate all the courses I have learned before. I also really appreciate all the experiences I had because they made me become who I am now. I believe everything is connected just like the knowlegde, and all the knowledge are connected just like everything!
+				</p>
+			</section>
 			</div>
 		</div>
+
+		<div style="max-width: 800px;margin: 0 auto;">
+			<section class="paragraph">
+				<!--<h2 style="color: tomato;">What I Share</h2>
+				<p>
+					I'm a graduate student at University of Michigan at Ann Arbor, focusing on Signal & Image Processing and Machine Learning.<br>
+					Before coming to UMich, I'm an engineering student mainly in signals and communications. I have done works like ..... 
+					I have strengthened my skills on programming from my experience of projects and other trainning @ Xi'an Jiaotong University. E.g. C programming while working on micro-controller, python while working on school project. Studying as an engineering student in signals and communications helped me learn about a variety of concepts. From hardware to software.
+					I've learned much on circuits, and working on CMU helped me get famlair with basic concepts in hardware 外设接口，随后了解信号与通信系统的概念，in communications area, I've learned basic ideas of electromagnetic field and antennas. Later I started learning about machine and data analysis methods. Currently, I want to focus more on theories and algorithm, ......<br>  
+					I like to keep learning and enjoy the process of creating new things or methods.
+				</p>-->
+
+				<h1>Jiayao Yang</h1>
+
+				<!---------------->
+				<h2 style="text-align: center;">Education</h2>
+				<section class="para-content">
+					<p>
+					<section>
+						<div class="column cv-time"><strong>Current</strong></div> 
+						<div class="column cv-edu">
+							<a href="https://umich.edu/" target="_blink">UNIVERSITY of MICHIGAN</a>, MI, United States<br>
+						</div>
+					</section>
+					</p>
+					<p>
+					<section>
+						<div class="column cv-time"><strong>2021.06</strong></div> 
+						<div class="column cv-edu">
+							Bachelor's Degree of Engineering (B.E.) in Information Engineering, <br><a href="http://www.xjtu.edu.cn/" target="_blink">XI'AN JIAOTONG UNIVERSITY(XJTU)</a>, Xi’an, China<br>
+							GPA: 88.42/100 (3.75/4.3) <br>Honors: Excellent Graduates <!--, School scholarship (3 times: 2018, 2019, 2020)-->
+						</div>
+					</section>
+					</p>
+					<p>
+					<section>
+						<div class="column cv-time"><strong>2019.09-2019.12</strong></div>
+						<div class="column cv-edu">
+							Academic Study Abroad Program, <br><a href="https://uci.edu/" target="_blink">UNIVERSITY of CALIFORNIA, IRVINE(UCI)</a>, Irvine, CA, United States<br>GPA: 3.98/4.0 
+						</div>
+					</section>
+					</p>
+				</section>
+				<!----------------------------------->
+				<h2 style="text-align: center;">Interests</h2>
+				<section class="para-content">
+					<p>
+						signal processing, machine learning.
+					</p>
+				</section>
+				<!------------------------------------>
+				<h2 style="text-align: center;">Relevant Experiences (Project & School Laboratory)</h2>
+				<section class="para-content">
+					<h3>Implement Machine Learning on Financial Data Analysis</h3><em>Oct. 2020 - June 2021</em>
+					<p class="p-compact column" ><!--style="max-width:400px;"-->
+						&emsp;&emsp;This is the project for graduation and my Bachelor’s Degree @ Xi'an Jiaotong University.
+						The goal is to help analyze the stock market and help with further stratagies' formation in trading. 
+						I mainly develped prediction models based on random forest, neural networks(DNN, LSTM), and studied the data from the Chinese stock market focusing on their daily change. My works are mainly based on Python, and Sklearn and tensorflow. <strong>(1)</strong> One work I did is make prediction by labeling them into three classes, aiming at getting more stocks be picked will rise than drop in short terms. <strong>(2)</strong> Another work I did is to further evalute the relationship between my models and the stock market where I found how many stocks be predicted as rise or drop can connect to the whole market's index.(<a href="assets/mlstock.png" target="_blink">an result example</a>) And that might help build different stratagies in trading.<br> &emsp;&emsp; From this project, I learned lot of concepts in machine learning, and improved my skills on data analysis and visualization.
+					</p><!--
+					<div class="column">
+						<img src="../assets/pic1.jpg" width="300">
+					</div>-->
+					<!--<img src="assets/mlstock.png" width="90%">-->
+					<!------------------------------------>
+					<!------------other experiences---------------->
+					<p class="p-compact">
+						<strong>Experiment on Array Signal Processing</strong> <em>(Oct 2020-Jan 2021)</em><br>
+						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University where I simulated the processes of DOA estimation (periodogram method, Capon, and MUSIC) and beamforming algorithm (Bartlett and MVDR) by using MATLAB. Also aquired the microphone array data by using LabVIEW and USB-6211 and implemented integral comb filtering on voice signal by using MATLAB.
+					</p>
+					<p class="p-compact">
+						<strong>Short-Distance Wireless Communication Designing</strong> <em>(Spring term 2020)</em><br>
+						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University in which I used Texas Instruments’ SimpleLink Wi-Fi CC3200 LaunchPad to develop applications based on C language, implemented basic applications such as temperature detection, moving detection. Also designed on-board HTML websites to interact with the board using on-board WiFi.
+					</p>
+					<p class="p-compact">
+						<strong>Specialty Experiment on Radio Frequency Circuit</strong> <em>(Spring term 2020)</em><br>
+						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University in which I learned ADS(Advanced Design System) to design and simulate microwave filters, power divider, amplifiers, antennas, etc. And used Vector Network Analyzer to measure the circuit performance.
+					</p>
+				</section>
+				<!------------------------------>
+				<!-- course work background -->
+				<!------------------------------>
+				<h2 style="text-align: center;">Some Coursework Background</h2>
+				<section class="para-content">
+					<ul>
+						<li>Discrete Mathematics | Probability Theory & Statistic | Complex Analysis</li>
+						<li>Signals & Systems | Digital Signal Processing | Intro to Control System | <br>Principle of Communications | Information Theory</li>
+						<li>Data Structure & Algorithm | Principle of Microcomputer | Computer Networks</li>
+						<li>Digital Logic Circuit | Analog Electronics | Design of VLSI Circuits | Analog/Communication IC Devices</li>
+						<li>Antenna Theory | Electromagnetic Field and Waves</li>
+					</ul>
+					<!------- a graph for illustration ---------->
+					<!--<p style="text-align: center;"><img src="assets/picture2.png" alt="coursework" width=300px></p>-->
+				</section>
+				<h2 style="text-align:center;">Skills</h2>
+				<section class="para-content">
+					<em>Programming</em>: Python, Matlab, Julia, LaTeX, C
+				</section>
+			</section>
+		</div>
+
+		<!------------------------------------->
+		<!--  -->
+		<!------------------------------------->
+		<!--
+		<div style="background: floralwhite;height: 200px;">
+			<center><h2>Skills</h2></center>
+			<p style="text-align: center;"><img src="assets/picture2.png" alt="coursework" width=300px></p>
+		</div>
+		-->
 		
 	</main>
+
+	<!--<hr>-->
 	<!-- footer -->
-	<hr>
-	<footer style="text-align: center;">
-		<small>&copy;2021 Jiayao Yang, Last update: 2021/9/12</small>
+	<div style="height: 30px;"></div>
+	<footer>
+		<small>Contact info: jiayao@umich.edu<br>&copy;Jiayao Yang, Last update: 2021/11/19 </small>
 	</footer>
 
 	<!-- others -->
