--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class='welcome'>
 			<div style="max-width: 800px;margin: 0 auto;">
 				<section style="display: inline-block;max-width: 700px;">
-					<p id="welcome-quate"><!--"Without music, life would be a mistake."-->We should consider every day lost on which we have not danced at least once. And we should call every truth false which was not accompanied by at least one laugh. 🌠🌠</p>
+					<p id="welcome-quate"><!--"Without music, life would be a mistake."-->We should consider every day lost on which we have not danced at least once. And we should call every truth false which was not accompanied by at least one laugh. &#9925;</p>
 					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
 					<section><!--newly added to make a box-->
 					<p>
