--- a/index.html
+++ b/index.html
@@ -110,15 +110,6 @@
 
 		<div style="max-width: 800px;margin: 0 auto;">
 			<section class="paragraph">
-				<!--<h2 style="color: tomato;">What I Share</h2>
-				<p>
-					I'm a graduate student at University of Michigan at Ann Arbor, focusing on Signal & Image Processing and Machine Learning.<br>
-					Before coming to UMich, I'm an engineering student mainly in signals and communications. I have done works like ..... 
-					I have strengthened my skills on programming from my experience of projects and other trainning @ Xi'an Jiaotong University. E.g. C programming while working on micro-controller, python while working on school project. Studying as an engineering student in signals and communications helped me learn about a variety of concepts. From hardware to software.
-					I've learned much on circuits, and working on CMU helped me get famlair with basic concepts in hardware 外设接口，随后了解信号与通信系统的概念，in communications area, I've learned basic ideas of electromagnetic field and antennas. Later I started learning about machine and data analysis methods. Currently, I want to focus more on theories and algorithm, ......<br>  
-					I like to keep learning and enjoy the process of creating new things or methods.
-				</p>-->
-
 				<h1>Jiayao Yang</h1>
 
 				<!---------------->
@@ -164,7 +155,7 @@
 					<p class="p-compact column" ><!--style="max-width:400px;"-->
 						&emsp;&emsp;This is the project for graduation and my Bachelor’s Degree @ Xi'an Jiaotong University.
 						The goal is to help analyze the stock market and help with further stratagies' formation in trading. 
-						I mainly develped prediction models based on random forest, neural networks(DNN, LSTM), and studied the data from the Chinese stock market focusing on their daily change. My works are mainly based on Python, and Sklearn and tensorflow. <strong>(1)</strong> One work I did is make prediction by labeling them into three classes, aiming at getting more stocks be picked will rise than drop in short terms. <strong>(2)</strong> Another work I did is to further evalute the relationship between my models and the stock market where I found how many stocks be predicted as rise or drop can connect to the whole market's index.(<a href="assets/mlstock.png" target="_blink">an result example</a>) And that might help build different stratagies in trading.<br> &emsp;&emsp; From this project, I learned lot of concepts in machine learning, and improved my skills on data analysis and visualization.
+						I mainly develped prediction models based on random forest, neural networks(DNN, LSTM), and studied the data from the Chinese stock market focusing on their daily change. My works are mainly based on Python, and Sklearn and tensorflow. <strong>(1)</strong> One work I did is make prediction by labeling them into three classes, aiming at getting more stocks be picked will rise than drop in short terms. <strong>(2)</strong> Another work I did is to further evalute the relationship between my models and the stock market where I found how many stocks be predicted as rise or drop can connect to the whole market's index.(<a href="assets/mlstock.png">an result example</a>) And that might help build different stratagies in trading.<br> &emsp;&emsp; From this project, I learned lot of concepts in machine learning, and improved my skills on data analysis and visualization.
 					</p><!--
 					<div class="column">
 						<img src="../assets/pic1.jpg" width="300">
