--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div style="max-width: 800px;margin: 0 auto;">
 				<section style="display: inline-block;max-width: 700px;">
 					<p id="welcome-quate"><!--"Without music, life would be a mistake."--><!--We should consider every day lost on which we have not danced at least once. And we should call every truth false which was not accompanied by at least one laugh.--> &#9925;</p>
-					<h1 class="welcome-title">Hi !<br/>Welcome t->o Jiayao's Website !</h1>
+					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
 					<section><!--newly added to make a box-->
 					<p>
 						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. Currently, I'm studying at <strong><a href="https://umich.edu/" target="_blink">University of Michigan-Ann Arbor</a></strong>'s ECE Department. 
