--- a/index.html
+++ b/index.html
@@ -37,22 +37,16 @@
 					<h1 class="welcome-title">Hi !<br/>Welcome to Jiayao's Website !</h1>
 					<section><!--newly added to make a box-->
 					<p>
-						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. Currently, I'm studying at <strong><a href="https://umich.edu/" target="_blink">University of Michigan-Ann Arbor</a></strong>'s ECE Department. 
-					</p>
-					<p>
-						As a learner in <font color="purple">signal and image processing and machine learning</font>, I'm excited to learn and expecting creating!
+						I'm Jiayao Yang. I got my Bachelar's Degree and graduated from <strong><a href="http://www.xjtu.edu.cn/" target="_blink">Xi'an Jiaotong University</a></strong> in June 2021. Currently, I'm a MS student at <strong><a href="https://umich.edu/" target="_blink">University of Michigan-Ann Arbor</a></strong>'s ECE Department. 
 					</p>
 					</section>
-					<!--<p>
-						I'm an engineering student mainly in signals and communications. <br>I'm interested in signal processing and machine learning.<br><strong><span style="color: red;">And I'm looking for Lab RA position.</span></strong>
-					</p>-->
 				</section><!--
 				<section style="display: inline-block;">
 					<img src="assets/picture1.png" alt="&#11029;" width=180px>
 				</section>-->
 				<p></p>
 				<section class="button">
-					<a href="mailto:jiayao@umich.edu" class="hovernone"><b>Contact Me &#9993; </b></a> &nbsp; jiayao@umich.edu
+					<a href="mailto:jiayao@umich.edu" class="hovernone"><b>Contact &#9993; </b></a> &nbsp; jiayao@umich.edu
 				</section>
 			</div>
 		</div>
@@ -67,17 +61,6 @@
 		<!-- to make the box at center with max width! -->
 			<!-- start with boxes. -->
 			<div class="col">
-				<!--<section class="intro-box">
-					<p class="p-para">More information is updating soon! I started this website from scratch. 
-					</p>
-				</section>-->
-				<!--<section class="intro-box">
-					<p class="p-para">Ability for sensing emotion, ability for sensing the life, ability for sensing the world. With both strength and emotions!
-					</p>
-				</section>-->
-				<!--<section class="intro-box">
-					<p class="p-para">You could contact me at <a href="mailto:jiayao@umich.edu" class="hovernone">jiayao@umich.edu</a></p>
-				</section>-->
 				<!------- adding a break in case no info ------->
 				<p style="text-align: center;">&#10024;&emsp;&#10024;&emsp;&#10024;&emsp;&#10024;</p>
 			</div>
@@ -88,28 +71,31 @@
 		<!-- A brif statement -->
 		<!------------------------------->
 		<div style="background: aliceblue;background: lavender;background: floralwhite;padding-bottom: 30px;" id="aboutme"><!--choices for background: floralwhite, -->
-			<div style="max-width: 800px;margin: 0 auto;">
+			<div style="max-width: 750px;margin: 0 auto;">
 			<section class="paragraph">
 				<h2 style="color: tomato;">About Me</h2>
 				<p class="p-compact">
-					&emsp;&emsp;Currently, I'm a graduate student at University of Michigan at Ann Arbor, focusing on <b>Signal & Image Processing and Machine Learning</b>. Before coming to Michigan, I was an engineering student mainly focusing on signals and communications at XI'an Jiaotong University. I have also taken courses at UC, Irvine for a quarter. 
+					&emsp;&emsp;Currently, I'm a graduate student at University of Michigan - Ann Arbor, focusing on <b>Signal & Image Processing and Machine Learning</b>. Before coming to Michigan, I was an engineering student mainly focusing on <font color="purple">signals and communications</font> at <strong>Xi'an Jiaotong University</strong>. I have also taken ECE courses at <strong>UC, Irvine</strong> for a quarter. 
 				</p>
 				<p class="p-compact">
-					&emsp;&emsp;Starting my undergraduate, I've learned lots of courses from different areas up to now. Courses relevant to such as <font color="purple"><em>signals, communications, circuits, and electromagnetism</em></font>. 
+					&emsp;&emsp;Starting my undergraduate, I've learned lots of courses from different areas up to now. Courses relevant to such as <font color="purple">signals, communications, circuits, and electromagnetism</font>. 
 
 					During last semester in my undergraduate I worked on a project using machine learning to analyze financial data and stock prices.
 
 					In my spare time, I enjoy music and painting.
 				</p>
 				<p class="p-compact">
-					&emsp;&emsp;I really appreciate all the courses I have learned before. I also really appreciate all the experiences I had because they made me become who I am now. I believe everything is connected just like the knowlegde, and all the knowledge are connected just like everything!
+					&emsp;&emsp;I really appreciate all the courses I have learned before. I also really appreciate all the experiences I had because they made me become who I am now. I believe everything is connected just like the knowlegde, and the knowledge is connected just like everything!
 				</p>
 			</section>
 			</div>
 		</div>
 
-		<div style="max-width: 800px;margin: 0 auto;">
+		<div style="max-width: 750px;margin: 0 auto;">
 			<section class="paragraph">
+				<!--<h2 style="color: tomato;">What I Share</h2>
+				<p></p>-->
+
 				<h1>Jiayao Yang</h1>
 
 				<!---------------->
@@ -119,7 +105,7 @@
 					<section>
 						<div class="column cv-time"><strong>Current</strong></div> 
 						<div class="column cv-edu">
-							<a href="https://umich.edu/" target="_blink">UNIVERSITY of MICHIGAN</a>, MI, United States<br>
+							<a href="https://umich.edu/" target="_blink">UNIVERSITY of MICHIGAN - ANN ARBOR</a>, Ann Arbor, MI, United States<br>
 						</div>
 					</section>
 					</p>
@@ -155,21 +141,17 @@
 					<p class="p-compact column" ><!--style="max-width:400px;"-->
 						&emsp;&emsp;This is the project for graduation and my Bachelor’s Degree @ Xi'an Jiaotong University.
 						The goal is to help analyze the stock market and help with further stratagies' formation in trading. 
-						I mainly develped prediction models based on random forest, neural networks(DNN, LSTM), and studied the data from the Chinese stock market focusing on their daily change. My works are mainly based on Python, and Sklearn and tensorflow. <strong>(1)</strong> One work I did is make prediction by labeling them into three classes, aiming at getting more stocks be picked will rise than drop in short terms. <strong>(2)</strong> Another work I did is to further evalute the relationship between my models and the stock market where I found how many stocks be predicted as rise or drop can connect to the whole market's index.(<a href="assets/mlstock.png">an result example</a>) And that might help build different stratagies in trading.<br> &emsp;&emsp; From this project, I learned lot of concepts in machine learning, and improved my skills on data analysis and visualization.
-					</p><!--
-					<div class="column">
-						<img src="../assets/pic1.jpg" width="300">
-					</div>-->
-					<!--<img src="assets/mlstock.png" width="90%">-->
+						I develped prediction models based on random forest and neural networks, and studied the data from the Chinese stock market focusing on their daily change. My works are mainly based on Python, and Sklearn and tensorflow. <strong>(1)</strong> One work I did is make prediction by labeling them into three classes, aiming at finding more stocks which will rise in short terms with certain precission. <strong>(2)</strong> Another work I did is to further evalute the relationship between my models and the stock market where I found how many stocks be predicted by my model as rise or drop showed some connections to the whole market's index.(<a href="assets/mlstock.png">an result example</a>) And that might help build different stratagies in trading.<br> &emsp;&emsp; From this project, I learned lots of concepts in machine learning, and improved my skills on data analysis and visualization.
+					</p>
 					<!------------------------------------>
 					<!------------other experiences---------------->
 					<p class="p-compact">
 						<strong>Experiment on Array Signal Processing</strong> <em>(Oct 2020-Jan 2021)</em><br>
-						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University where I simulated the processes of DOA estimation (periodogram method, Capon, and MUSIC) and beamforming algorithm (Bartlett and MVDR) by using MATLAB. Also aquired the microphone array data by using LabVIEW and USB-6211 and implemented integral comb filtering on voice signal by using MATLAB.
+						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University in which I simulated DOA estimation (periodogram method, Capon, and MUSIC) and beamforming algorithm (Bartlett and MVDR) by using MATLAB. Also aquired the microphone array data and processed the voice signals.
 					</p>
 					<p class="p-compact">
 						<strong>Short-Distance Wireless Communication Designing</strong> <em>(Spring term 2020)</em><br>
-						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University in which I used Texas Instruments’ SimpleLink Wi-Fi CC3200 LaunchPad to develop applications based on C language, implemented basic applications such as temperature detection, moving detection. Also designed on-board HTML websites to interact with the board using on-board WiFi.
+						&emsp;&emsp;This is a school laboratory @ Xi’an Jiaotong University in which I used TI's<!--Texas Instruments’--> SimpleLink Wi-Fi CC3200 LaunchPad and implemented applications using C language, such as temperature detection, moving detection. Also designed on-board HTML websites for interaction using on-board WiFi.
 					</p>
 					<p class="p-compact">
 						<strong>Specialty Experiment on Radio Frequency Circuit</strong> <em>(Spring term 2020)</em><br>
@@ -179,14 +161,19 @@
 				<!------------------------------>
 				<!-- course work background -->
 				<!------------------------------>
-				<h2 style="text-align: center;">Some Coursework Background</h2>
+				<h2 style="text-align: center;">Coursework Background</h2>
 				<section class="para-content">
 					<ul>
+						<strong>Current course at UM</strong>
+						<li>EECS 501 Probability and Random Processes | EECS 516 Medical Imaging Systems | <br>EECS 551 Matrix Methods</li>
+						<strong>Courses at UCI</strong>
+						<li>Digital Signal Processing | Analog/Communication IC Devices | <br>Intro to Control System | Control System Lab</li>
+						<strong>Some courses at XJTU</strong>
 						<li>Discrete Mathematics | Probability Theory & Statistic | Complex Analysis</li>
-						<li>Signals & Systems | Digital Signal Processing | Intro to Control System | <br>Principle of Communications | Information Theory</li>
+						<li>Signals & Systems | Digital Signal Processing | Principle of Communications | Information Theory</li>
 						<li>Data Structure & Algorithm | Principle of Microcomputer | Computer Networks</li>
-						<li>Digital Logic Circuit | Analog Electronics | Design of VLSI Circuits | Analog/Communication IC Devices</li>
-						<li>Antenna Theory | Electromagnetic Field and Waves</li>
+						<li>Digital Logic Circuit | Analog Electronics | Design of VLSI Circuits</li>
+						<li>Electromagnetic Field and Waves | Antenna Theory</li>
 					</ul>
 					<!------- a graph for illustration ---------->
 					<!--<p style="text-align: center;"><img src="assets/picture2.png" alt="coursework" width=300px></p>-->
@@ -214,7 +201,7 @@
 	<!-- footer -->
 	<div style="height: 30px;"></div>
 	<footer>
-		<small>Contact info: jiayao@umich.edu<br>&copy;Jiayao Yang, Last update: 2021/11/19 </small>
+		<small>Contact info: jiayao@umich.edu<br>&copy;Jiayao Yang, Last update: 2021/11/21 </small>
 	</footer>
 
 	<!-- others -->
