--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a href="index.html" class="nav-ele">Home</a>
 				<!--<a href="pages/cv.html" class="nav-ele">About Me</a>-->
 				<a href="#aboutme" class="nav-ele">About Me</a>
+				<a href="#mynotes" class="nav-ele">My Notes</a>
 				<!--<a href="pages/education.html" class="nav-ele">Education</a>-->
 				<!--
 				<a href="" class="nav-ele">Hobbies</a>
@@ -178,9 +179,21 @@
 					<!------- a graph for illustration ---------->
 					<!--<p style="text-align: center;"><img src="assets/picture2.png" alt="coursework" width=300px></p>-->
 				</section>
+				<!------------------------------>
+				<!-- skills -->
+				<!------------------------------>
 				<h2 style="text-align:center;">Skills</h2>
 				<section class="para-content">
 					<em>Programming</em>: Python, Matlab, Julia, LaTeX, C
+				</section>
+				<!------------------------------>
+				<!-- notes -->
+				<!------------------------------>
+				<h2 style="text-align:center;" id="mynotes">My Notes</h2>
+				<section class="para-content">
+					<ul>
+						<li><a href="files/prp.pdf">probability and processes</a></li>
+					</ul>
 				</section>
 			</section>
 		</div>
