--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<h2 style="text-align: center;">Coursework Background</h2>
 				<section class="para-content">
 					<ul>
-						<strong>Current course at UM</strong>
+						<strong>Courses at UM</strong>
 						<li>EECS 501 Probability and Random Processes | EECS 516 Medical Imaging Systems | <br>EECS 551 Matrix Methods</li>
 						<strong>Courses at UCI</strong>
 						<li>Digital Signal Processing | Analog/Communication IC Devices | <br>Intro to Control System | Control System Lab</li>
@@ -214,7 +214,7 @@
 	<!-- footer -->
 	<div style="height: 30px;"></div>
 	<footer>
-		<small>Contact info: jiayao@umich.edu<br>&copy;Jiayao Yang, Last update: 2021/11/21 </small>
+		<small>Contact info: jiayao@umich.edu<br>&copy;Jiayao Yang, Last update: 2/25/2022 </small>
 	</footer>
 
 	<!-- others -->
