--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<a href="index.html" class="nav-ele">Home</a>
 				<!--<a href="pages/cv.html" class="nav-ele">About Me</a>-->
 				<a href="#aboutme" class="nav-ele">About Me</a>
-				<a href="#mynotes" class="nav-ele">My Notes</a>
+				<a href="#links" class="nav-ele">Links</a>
+				<!--<a href="#mynotes" class="nav-ele">My notes</a>-->
 				<!--<a href="pages/education.html" class="nav-ele">Education</a>-->
 				<!--
 				<a href="" class="nav-ele">Hobbies</a>
@@ -185,6 +186,28 @@
 				<h2 style="text-align:center;">Skills</h2>
 				<section class="para-content">
 					<em>Programming</em>: Python, Matlab, Julia, LaTeX, C
+				</section>
+				<!-------------------------->
+				<!-- Links -->
+				<!--------------------------->
+				<h2 style="text-align:center;" id="links">Links</h2>
+				<section style="padding-left: 25px;">
+				<div style="width: 300px; background: floralwhite; border: 1px solid rgb(205,205,205);border-left: 6px solid rgb(205,205,205,0.8);padding: 10px;border-radius: 5px; margin: 5px; display: inline-block;vertical-align: top;">
+						<li><a href="https://mail.google.com/mail/u/0/" target="_blink">Gmail</a></li>
+						<li><a href="https://calendar.google.com/calendar/u/0/r?tab=mc" target="_blink">Google Calendar</a></li>
+						<li><a href="https://drive.google.com/drive/my-drive" target="_blink">Google Drive</a></li>
+						<li><a href="https://www.overleaf.com/project" target="_blink">Overleaf</a></li>
+						<li><a href="https://github.com/" target="_blink">Github</a></li>
+				</div>
+				<div style="width: 300px; background: floralwhite; border: 1px solid rgb(205,205,205);border-left: 6px solid rgb(205,205,205,0.8);padding: 10px; border-radius: 5px; margin: 5px; display: inline-block;vertical-align: top;">
+						<li><a href="https://umich.instructure.com/" target="_blink">Canvas</a></li>
+						<li><a href="https://www.gradescope.com/account" target="_blink">Gradescope</a></li>
+						<li><a href="https://piazza.com/class/kxw3fo3ik4c72w" target="_blink">Piazza</a></li>
+						<li><a href="https://wolverineaccess.umich.edu/" target="_blink">Wolverine</a></li>
+						<li><a href="https://ece.engin.umich.edu/research/research-areas/signal-image-processing-and-machine-learning/" target="_blink">Umich ECE SIPML</a></li>
+						<li><a href="https://www.lib.umich.edu/" target="_blink">UM Library</a></li>
+						<li><a href="https://www.dropbox.com/h" target="_blink">UM Dropbox</a></li>
+				</div>
 				</section>
 				<!------------------------------>
 				<!-- notes -->
