--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				<!-- Links -->
 				<!--------------------------->
 				<h2 style="text-align:center;" id="links">Links</h2>
-				<section style="padding-left: 25px;">
+				<section style="padding-left: 15px;padding-right: 15px;">
 				<div style="width: 300px; background: floralwhite; border: 1px solid rgb(205,205,205);border-left: 6px solid rgb(205,205,205,0.8);padding: 10px;border-radius: 5px; margin: 5px; display: inline-block;vertical-align: top;">
 						<li><a href="https://mail.google.com/mail/u/0/" target="_blink">Gmail</a></li>
 						<li><a href="https://calendar.google.com/calendar/u/0/r?tab=mc" target="_blink">Google Calendar</a></li>
