--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<a href="" class="nav-ele">Interests</a>
 				<a href="pages/about.html" class="nav-ele">About</a>
 				<a href="pages/contact.html" class="nav-ele">Contact</a>-->
-				<!-- <a href="pages/blogs.html" class="nav-ele">Blogs</a> -->
+				<a href="pages/blogs.html" class="nav-ele">Blogs</a>
 			</section>
 		</nav>
 	</header>
