--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				<!-------------------------->
 				<!-- Links -->
 				<!--------------------------->
-				<h2 style="text-align:center;font-size: 18px;" id="links">Links make my life easier</h2>
+				<!--<h2 style="text-align:center;font-size: 18px;" id="links">Links make my life easier</h2>
 				<section style="padding-left: 15px;padding-right: 15px;">
 				<div style="width: 300px; background: linear-gradient(to right, whitesmoke, rgb(0,0,0,0)); border: 1px solid rgb(205,205,205,0);border-left: 6px solid rgb(205,205,205,0.8);padding: 10px; border-radius: 5px; margin: 5px; display: inline-block;vertical-align: top;">
 						<li><a href="https://mail.google.com/mail/u/0/" target="_blink">Gmail</a></li>
@@ -332,7 +332,7 @@
 						<li><a href="https://www.dropbox.com/h" target="">UM Dropbox</a></li>
 						<li><a href="https://umich.zoom.us/profile">[Zoom]</a></li>
 				</div>
-				</section>
+				</section>-->
 				<!--------- adding some other links ---------->
 				<!-- <section class="para-content">
 					<p class="p-compact" style="text-align: center;font-size: small;">
