--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 				<!--------------------------->
 				<h2 style="text-align:center;" id="mynotes">My Notes</h2>
 				<!------- presented notes ------->
-				<section class="para-content"> 
+				<!--<section class="para-content"> 
 					<ul>
 						<li>
 							<a href="files/um-eecs-501.pdf">[probability and random processes]</a><br>
@@ -285,7 +285,7 @@
 							<a href="file:///E:/MyDocuments/LatexDocs/MyNotes/matrix/matrix_note.pdf">[Matrix notes]</a>
 						</li>
 					</ul>
-				</section>
+				</section>-->
 				<!--------- not presented notes ---------->
 				<!-- <section class="para-content">
 					<p class="p-compact" style="text-align: center;font-size: small;">
